# l2r-server-emulator

./: Cargo.toml
client/src/: client.rs  lib.rs
client/src/crypto/: mod.rs
gameserver/: Cargo.toml
gameserver/src/: gameserver.rs  main.rs
loginserver/: Cargo.toml
loginserver/src/: lib.rs  login_flow.rs  login_server.rs  main.rs  structs.rs
loginserver/src/crypto/: credentials.rs  mod.rs  xor.rs
loginserver/src/network/: serverpacket.rs
loginserver/src/network/handler/: client_connection.rs  gameserver_connection.rs  mod.rs
loginserver/src/packet/: client.rs  mod.rs  server.rs
loginserver/src/repository/: account.rs  mod.rs
loginserver/src/structs/: account.rs  connected_client.rs  connected_gameserver.rs  mod.rs
loginserver/tests/: login_server.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/crypto/: blowfish.rs  mod.rs  xor.rs
shared/src/network/: listener.rs  mod.rs  serverpacket.rs  socket.rs  stream.rs  tokio_tcp_listener.rs  tokio_tcp_stream.rs
shared/src/network/channel/: channel_connection.rs  channel_listener.rs  channel_socket.rs  channel_stream.rs  mod.rs
shared/src/network/packet/: mod.rs  receivable.rs  sendable.rs  sendable_packet.rs
shared/src/network/tcp/: mod.rs  tokio_tcp_listener.rs  tokio_tcp_socket.rs
shared/src/structs/: mod.rs  modulus.rs  server.rs  session.rs
src/: main.rs  network.rs
src/packet/: client.rs
src/packet/client/: login.rs
src/packet/server/: login.rs
tests/: Cargo.toml
tests/src/mocks/: stream.rs
tests/tests/: tests.rs
tests/tests/loginserver/: login_server.rs  mod.rs
(+34 files in other folders)
