[package]
name = "gameserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "gameserver"
test = false
doctest = false
[lib]
test = false
doctest = false
[dependencies]
shared = { path = "../shared" }
loginserver = { path = "../loginserver" }
